--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # MONGO_URI=your-mongodb-connection-string
-MONGO_URI=mongodb://localhost:27017/crossword-puzzle
+MONGO_URL=mongodb://localhost:27017/crossword-puzzle
 JWT_SECRET=your-secret-key
 PORT=3000
