--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # MONGO_URI=your-mongodb-connection-string
-MONGO_URL=mongodb://localhost:27017/crossword-puzzle
+MONGO_URL=mongodb+srv://oladan:<Grandpa2473>@access-doyin.fg7dv.mongodb.net/?retryWrites=true&w=majority&appName=access-doyin
 JWT_SECRET=your-secret-key
 PORT=3000
